Hard code farm-ng-amiga compatible with dashboard fw <= v0.1.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ setup_requires =
 install_requires =
     wheel
     kivy
-    farm_ng_amiga>=0.0.9
+    farm_ng_amiga==0.0.8 # Hard coded for dashboard fw <= v0.1.8. Will fail w/ fw >= v0.1.9
     PyTurboJPEG
 tests_require =
     pytest
